summative.moria.Moria.scala.error
Erreur de compilation :
Moria:19: error: too many arguments for method droite: ()Unit
droite(2) 
      ^